--- a/index.html
+++ b/index.html
@@ -5536,7 +5536,7 @@
                     href="javascript:void(0)"
                     class="mb-2 inline-block text-base leading-loose text-[#f3f4fe] hover:text-primary"
                   >
-                    PlainAdmin
+                   Real estate
                   </a>
                 </li>
               </ul>
