fourth commit to metlep

--- a/index.html
+++ b/index.html
@@ -1955,7 +1955,7 @@
                 <p
                   class="mb-1 text-base font-medium leading-loose text-body-color"
                 >
-                We use hot underground water and surface flowing water to generate electricity and power homes, farms and businesses.
+                We at Metlep specialize in the production of biofuels as a renewable alternative to fossil fuels.
                 </p>
                
               </div>
