fifth commit to metlep

--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
               <h2
                 class="mb-4 text-3xl font-bold text-dark sm:text-4xl md:text-[42px]"
               >
-              METLEP
+              Core values
               </h2>
               <p
                 class="text-lg leading-relaxed text-body-color sm:text-xl sm:leading-relaxed"
@@ -1453,10 +1453,10 @@
               </svg>
             </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
-                Digital Transformation
+                Innovation
               </h4>
               <p class="mb-8 text-body-color lg:mb-11">
-                At METLEP, we specialize in helping the Government and businesses adapt and thrive in the digital age
+                We embrace change and continuously seek new ways to push the boundaries of technology, staying at the forefront of industry trends.
               </p>
               <a
                 href="javascript:void(0)"
@@ -1491,10 +1491,10 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
-                Holistic Solutions
+                Integrity
               </h4>
               <p class="mb-8 text-body-color lg:mb-11">
-                We offer comprehensive, end-to-end solutions that address not just the immediate problem but also the broader strategic context.
+                We uphold the highest ethical standards in all our interactions, fostering trust and transparency in every relationship.
               </p>
               <a
                 href="javascript:void(0)"
@@ -1526,10 +1526,10 @@
               </svg>
             </div>
               <h4 class="mb-3 text-xl font-bold text-dark">
-                Proven track record
+                Excellence
               </h4>
               <p class="mb-8 text-body-color lg:mb-11">
-                As climate change accelerates, we help communities prepare for, and adapt to, changing water patterns.
+                We are committed to delivering quality in every project. Our pursuit of excellence drives us to continuously improve and grow.
               </p>
               <a
                 href="javascript:void(0)"
